--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "lint": "eslint --ignore-path .eslintignore --ext \"lib/*.ts\""
+    "lint": "eslint --ignore-path .eslintignore --ext \"lib/*.ts\"",
+    "format": "prettier --ignore-path .gitignore --write \"lib/**/*.+(js|ts|json)\"",
+    "test": "yarn lint:format && jest"
   },
   "dependencies": {
     "app-root-path": "^3.1.0",
