--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "lint": "eslint --ignore-path .eslintignore --ext \"lib/*.ts\"",
-    "format": "prettier --ignore-path .gitignore --write \"lib/**/*.+(js|ts|json)\"",
+    "lint": "eslint --ignore-path .eslintignore --ext \"**/*.ts\"",
+    "format": "prettier --ignore-path .gitignore --write \"**/**/*.+(js|ts|json)\"",
     "lint:format": "yarn lint && yarn format",
     "test": "yarn lint:format && jest"
   },
@@ -17,33 +17,25 @@
     "app-root-path": "^3.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jest": "^29.4.3",
-    "jest-watch-suspend": "^1.1.2",
-    "jest-watch-typeahead": "^2.2.2",
     "pg": "^8.9.0",
     "redis": "^4.6.5",
-    "ts-jest": "^29.0.5",
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@types/app-root-path": "^1.2.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.6",
     "@types/pg": "^8.6.6",
-    "@types/winston": "^2.4.4",
+    "@types/redis": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
-    "esbuild": "^0.17.11",
-    "esbuild-node-externals": "^1.6.0",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest-auto-spies": "^1.6.10",
-    "path": "^0.12.7",
+    "jest": "^29.4.3",
     "prettier": "^2.8.4",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
+    "ts-jest": "^29.0.5",
+    "tslint-plugin-prettier": "^2.3.0",
     "typescript": "^4.9.5"
   }
 }
